fix: fixed spacing issues in form

--- a/src/index.css
+++ b/src/index.css
@@ -52,4 +52,8 @@ body {
   .textarea {
     @apply border border-grey-500 w-full rounded-md p-2 transition-all cursor-pointer hover:border-green-600 focus:outline-0 focus:ring-green-600;
   }
+
+  .btn {
+    @apply block bg-green-600 w-full h-[50px] text-[18px] leading-[150%] text-white font-bold rounded-md cursor-pointer transition-all ease-in-out hover:bg-grey-900;
+  }
 }
